--- a/scss/src/_slide.scss
+++ b/scss/src/_slide.scss
@@ -15,8 +15,6 @@ section {
         width: 50%;
         padding: 30px;
         margin: 0 auto;
-        vertical-align: middle;
-        overflow: scroll;
     }
     &.tools-are-a-hassle {
         background-color: #fff;
@@ -62,6 +60,9 @@ section {
     }
     &.fear_of_change {
         background-image: image-url('fear_of_change.gif');
+    }
+    &.future_tools {
+        background-image: image-url('future_tools.gif');
     }
     &.loading {
         background-image: image-url('loading.gif');
@@ -120,10 +121,9 @@ header {
 
 .conclusion {
     .logo-wrapper {
-        height: 500px;
+        height: 600px;
         .roger {
-            margin-top: 40px;
-            margin-left: -7px;
+            // margin-top: 80px;
         }
     }
 }
